[project]
name = "agenticchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "streamlit>=1.52.2",
    "tavily-python>=0.7.17",
]
